# TransitionTableToDFA

./: .gitignore  .replit  README.md  main.py  pyproject.toml  replit.nix
src/: DFA.py  app.py
src/static/: DFA.gv  dfa.css  index.js  style.css
src/templates/: dfa.html  index.html
