[tool.poetry]
name = "Transition table to DFA"
version = "0.1.0"
description = "Transition table to Deterministic Finite automata Visualizer"
authors = ["Neeraj <neerajkumar18971@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0"
graphviz = "^0.20.3"
flask = "^3.0.3"
moviepy = "^1.0.3"
pandas = "^2.2.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
